--- a/GitSeeker/src/components/BackBtn.module.css
+++ b/GitSeeker/src/components/BackBtn.module.css
@@ -3,12 +3,12 @@
   top: 1rem;
   left: 1rem;
   padding: 0.5rem 1rem;
-  color: #9da5d1;
-  background-color: #2b3566;
+  color: #fff;
+  background-color: #17a589;
   cursor: pointer;
   border: none;
   border-radius: 5px;
-  opacity: 0.9;
+  opacity: 0.6;
 }
 
 .back_btn:hover {
