--- a/GitSeeker/src/routes/Repos.module.css
+++ b/GitSeeker/src/routes/Repos.module.css
@@ -2,10 +2,11 @@
   font-size: 1.2rem;
   text-align: center;
   margin-bottom: 2rem;
+  color: #0083c3;
 }
 
 .repos_container {
-  background-color: #2b3566;
+  background-color: #ff8433;
   padding: 2rem;
   border-radius: 1rem;
   display: flex;
